# FilePickerAPI

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  run_production.bat  run_test.bat  test_main.py
.github/workflows/: build-exe.yml  release.yml
app/: __init__.py  __main__.py  config.py  main.py  settings.py
app/handlers/: __init__.py  files.py  root.py
tests/: __init__.py  test_main.py
